[gd_scene load_steps=7 format=3 uid="uid://bmo4kclrgl70r"]

[ext_resource type="PackedScene" uid="uid://dh0mke6rsqtg8" path="res://remi/lab/target.tscn" id="1_aeyht"]
[ext_resource type="Texture2D" uid="uid://cq3g5l85kyom2" path="res://remi/lab/assets/fin_petit.png" id="2_4j8wv"]
[ext_resource type="Script" path="res://remi/lab/targets/end.gd" id="2_kgy1d"]
[ext_resource type="Texture2D" uid="uid://vve7wxd7u28y" path="res://remi/lab/assets/fin_petit_on.png" id="3_8g8mw"]
[ext_resource type="Texture2D" uid="uid://dxa7awgcsoxsp" path="res://remi/lab/assets/fin_petit_hover.png" id="4_gnf7c"]
[ext_resource type="Texture2D" uid="uid://dci6qsjtvu7xi" path="res://remi/lab/assets/fin_petit_focus.png" id="6_50ogq"]

[node name="End" instance=ExtResource("1_aeyht")]
script = ExtResource("2_kgy1d")

[node name="TextureButton" parent="." index="0"]
focus_mode = 0
disabled = true
texture_normal = ExtResource("2_4j8wv")
texture_pressed = ExtResource("3_8g8mw")
texture_hover = ExtResource("4_gnf7c")
texture_disabled = ExtResource("2_4j8wv")
texture_focused = ExtResource("6_50ogq")

[node name="Plots" type="Node2D" parent="." index="1"]
visible = false
position = Vector2(-220, 32)

[node name="Line2DTemperature" type="Line2D" parent="Plots" index="0"]
width = 6.0
default_color = Color(1, 0.368627, 0.380392, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Line2DRadioactivity" type="Line2D" parent="Plots" index="1"]
width = 6.0
default_color = Color(0.498039, 1, 0.505882, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Line2DBiodiversity" type="Line2D" parent="Plots" index="2"]
width = 6.0
default_color = Color(0.498039, 0.756863, 1, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Plots2" type="Node2D" parent="." index="2"]
visible = false
position = Vector2(36, 32)

[node name="Line2DTemperature" type="Line2D" parent="Plots2" index="0"]
width = 6.0
default_color = Color(1, 0.368627, 0.380392, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Line2DRadioactivity" type="Line2D" parent="Plots2" index="1"]
width = 6.0
default_color = Color(0.498039, 1, 0.505882, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Line2DBiodiversity" type="Line2D" parent="Plots2" index="2"]
width = 6.0
default_color = Color(0.498039, 0.756863, 1, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
